--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,93 +1,89 @@
-.header {
-  width: 100%;
-  height: 80px;
-  line-height: 80px;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.nav__list {
-  margin: 0;
-  padding: 0;
+li {
   list-style: none;
-  display: flex;
-  column-gap: 1.3rem;
 }
-/* div .logo {
-  margin: 20px;
-} */
+
+.navbar {
+  height: 15vh;
+  line-height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .logo {
   flex-wrap: nowrap;
   height: 75px;
-  width: 120px;
+  width: 75px;
   display: flex;
   justify-content: flex-start;
 }
-.nav__item a {
-  font-weight: 500;
-  font-size: 1.1rem;
-  color: #0a2b1e;
-  text-decoration: none;
-  transition: 0.3s;
+
+.nav-links {
+  display: flex;
+  justify-content: flex-end;
+  width: 75%;
 }
 
-.nav__item a:hover {
-  color: #17bf9e;
-}
-
-.nav__right p {
-  font-weight: 500;
-  color: #0a2b1e;
-  font-size: 1.1rem;
-}
-
-.nav__right p i {
-  font-size: 1.3rem;
-}
-
-.mobile__menu span i {
-  font-size: 1.4rem;
-  color: #0a2b1e;
+.nav-links li {
+  color: black;
+  font-size: 20px;
+  padding: 0 10px;
+  margin: 0 10px;
   cursor: pointer;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+/* 
+.nav-links Link {
+  text-decoration: none;
+} */
+
+button {
+  border: none;
+  background: none;
+  font-size: 20px;
 }
 
-.mobile__menu {
+.mobile-menu-icon {
   display: none;
 }
 
-@media only screen and (max-width: 991px) {
-  .nav__menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #0a2b1ec2;
-    z-index: 99;
-    display: none;
-  }
-
-  .nav__list {
-    position: absolute;
-    background: #fff;
-    top: 0;
-    right: 0;
-    width: 250px;
-    height: 100%;
+@media (max-width: 768px) {
+  /* .logo {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 999;
-    padding-top: 80px;
-  }
-
-  .mobile__menu {
-    display: block;
-  }
-  .nav__right {
+    position: absolute;
+    top: 15px;
+    left: 35px;
+  } */
+  .nav-links {
     display: none;
   }
-
-  .active__menu {
+  .nav-links-mobile {
+    position: absolute;
     display: block;
+    list-style: none;
+    box-shadow: rgba(50, 50, 93, 0.23) 0 30px 30px -20px;
+    left: 0;
+    top: 10%;
+    transition: all 0.5s ease-in-out;
+    width: 100%;
+    background-color: white;
+  }
+  ul li {
+    padding: 32px;
+    width: 100%;
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+  }
+  .mobile-menu-icon {
+    position: absolute;
+    display: block;
+    right: 20px;
   }
 }
