Add Search input to the Navbar

--- a/src/components/HomeSection/homesection.css
+++ b/src/components/HomeSection/homesection.css
@@ -6,7 +6,7 @@
 .hero__content {
   padding-top: 80px;
 }
-.search input {
+/* .search input {
   border: none;
   outline: none;
   padding: 7px 10%;
@@ -20,4 +20,4 @@
   align-items: center;
   border-radius: 50px;
   margin-top: 20px;
-}
+} */
